- correction to saving spreadsheet file - cleanup of handling amazon orders lists